<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:stretchColumns="*">

    <TableRow
        android:gravity="center"
        android:padding="5dp">
        <TextView android:text="@string/cabecera_de_la_tabla"
            android:textStyle="bold"/>

    </TableRow>

    <TableRow
        android:background="#216599">
        <TextView android:text="@string/nombre" android:textColor="@color/white"/>
        <TextView android:text="@string/dpto" android:textColor="@color/white"/>
        <TextView android:text="@string/ciudad" android:textColor="@color/white"/>
        <TextView android:text="@string/porcentaje" android:textColor="@color/white"/>
        <TextView android:text="@string/edad" android:textColor="@color/white"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/santiago"/>
        <TextView android:text="Marketing"/>
        <TextView android:text="Lanús"/>
        <TextView android:text="100%"/>
        <TextView android:text="20" android:id="@+id/tv1"/>
    </TableRow>

    <TableRow
        android:background="#E2DEDE">
        <TextView android:text="Juan Pablo"/>
        <TextView android:text="RR.HH"/>
        <TextView android:text="Alsina"/>
        <TextView android:text="49%"
                    android:layout_marginLeft="5dp"/>
        <TextView android:text="20" android:id="@+id/tv2"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/santiago"/>
        <TextView android:text="Marketing"/>
        <TextView android:text="Lanús"/>
        <TextView android:text="100%"/>
        <TextView android:text="40" android:id="@+id/tv3"/>
    </TableRow>

    <TableRow
        android:background="#E2DEDE">
        <TextView android:text="Juan Pablo"/>
        <TextView android:text="RR.HH"/>
        <TextView android:text="Alsina"/>
        <TextView android:text="49%"/>
        <TextView android:text="25" android:id="@+id/tv4"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/santiago"/>
        <TextView android:text="Marketing"/>
        <TextView android:text="Lanús"/>
        <TextView android:text="100%"/>
        <TextView android:text="10" android:id="@+id/tv5"/>
    </TableRow>

    <TableRow
        android:background="#E2DEDE">
        <TextView android:text="Juan Pablo"/>
        <TextView android:text="RR.HH"/>
        <TextView android:text="Alsina"/>
        <TextView android:text="49%"/>
        <TextView android:text="30" android:id="@+id/tv6"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/resultado"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="15sp"
            android:id="@+id/tvr"/>

    </TableRow>

</TableLayout>